# velysterm

./: Cargo.toml  README.md  conf.nix  test_sym.rs
.idx/: dev.nix
assets/typst/: editor.typ  term_v3.typ  terminal.typ
crates/delta_algebra/: Cargo.toml
crates/delta_algebra/src/: expand.wgsl  lib.rs  types.rs
crates/delta_sirk/: Cargo.toml  README.md
crates/delta_sirk/src/: lib.rs  shader.wgsl
crates/fock_sirk/: Cargo.toml  README.md
crates/fock_sirk/examples/: anharmonic_oscillator.rs  simulation.rs
crates/fock_sirk/src/: lib.rs
crates/nested_fock_algebra/: Cargo.toml
crates/nested_fock_algebra/src/: bin.rs  cas.rs  lib.rs
examples/: editor.rs  terminal.rs
src/: lib.rs  renderer.rs
