[workspace]
resolver = "2"
members = ["crates/*", "crates/delta_sirk", "crates/nested_fock_algebra"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/velyst"
readme = "README.md"

[workspace.dependencies]
# Bevy dependencies
bevy = { version = "0.18.1", default-features = false, features = [
  "default_app",
  "bevy_winit",
  "x11",
  "wayland",
  "2d_bevy_render",
  "ui_bevy_render",
] }
bevy_vello = "0.13.1"
# Vello dependencies
vello = "0.7.0"
vello_svg = "0.9.0"
# Typst dependencies
typst = "0.14.2"
typst-library = "0.14.2"
typst-eval = "0.14.2"
typst-layout = "0.14.2"
typst-assets = "0.14.2"
# In sync with Typst:
unicode-math-class = "0.1"
ttf-parser = "0.25"
hayro = "0.4"
wgpu = "27"
# Other
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ecow = { version = "0.2", features = ["serde"] }
thiserror = "2.0.18"
smallvec = "1.15.1"
paste = "1"
num-complex = "0.4.6"
rustc-hash = "2.1.1"
rayon = "1.11.0"
nalgebra = "0.34.1"
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1", features = ["derive"] }
loro = "1.10.3"


# Terminal
alacritty_terminal = "0.25.1"
portable-pty = "0.9.0"

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"
type_complexity = "allow"

[package]
name = "velyst"
description = "A Typst integration for Vello and Bevy."
exclude = ["/assets/", "/.github/", "/examples/"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Local dependencies
typst_element = { path = "crates/typst_element", version = "0.1.0" }
typst_vello = { path = "crates/typst_vello", version = "0.1.0" }

bevy = { workspace = true, features = ["bevy_log"] }
bevy_vello = { workspace = true, features = ["svg"] }
typst = { workspace = true }
typst-eval = { workspace = true }
typst-layout = { workspace = true }
typst-assets = { workspace = true, optional = true }
chrono = { workspace = true }
ecow = { workspace = true }
smallvec = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
loro = { workspace = true }


[features]
default = ["embed-fonts"]
embed-fonts = ["dep:typst-assets", "typst-assets/fonts"]

[dev-dependencies]
bevy = { workspace = true, features = ["file_watcher", "default_platform"] }
bevy_vello = { workspace = true, features = ["svg"] }

[lints]
workspace = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
debug = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
