[package]
name = "delta_algebra"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated Hermite-recursion algebraic evaluator for multi-dimensional Fock spaces."
license = "MIT OR Apache-2.0"

[dependencies]
wgpu    = { workspace = true }
bytemuck = { version = "1.16", features = ["derive"] }
tokio   = { version = "1.36", features = ["full"] }
log     = "0.4"

[dev-dependencies]
tokio   = { version = "1.36", features = ["full"] }
approx  = "0.5"
