[package]
name = "fock_sirk"
version = "0.1.0"
edition = "2024"
description = "High-performance Shift-Invert Rational Krylov solver for Fock spaces."

[dependencies]
nested_fock_algebra = { path = "../nested_fock_algebra" }
num-complex = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
